# H2O

./: .gitignore  H2O_train.py  H2O_train.sh  H2O_train2.py  H2O_train3.py  H2O_train3.sh  H2O_train4.py  H2O_train4.sh  H2O_train5.py  H2O_train5.sh  H2O_train6.py  H2O_train6_cross_4cam.py  H2O_train6_cross_att.py  H2O_train6_cross_notrace.py  H2O_train6_cross_notrace_enc.py  H2O_train6_cross_notrace_losses.py  H2O_train6_cross_notrace_vis.py  H2O_train6_cross_notrace_vis_offset.py  H2O_train6_cross_notrace_vis_offset_normaliz.py  H2O_train6_cross_notrace_vis_offset_normaliz_dmodule.py  H2O_train6_cross_notrace_vis_offset_normaliz_encoder_only.py  H2O_train6_cross_notrace_vis_offset_normaliz_single_loss.py  H2O_train6_cross_notrace_vis_offset_simp_temp.py  H2O_train6_cross_notrace_vis_rec.py  H2O_train6_cross_offset.py  H2O_train6_cross_offset_dist_an.py  H2O_train6_cross_offset_long.py  H2O_train6_cross_offset_progressive.py  H2O_train6_cross_offset_progressive_block.py  H2O_train6_cross_offset_progressive_single_loss.py  H2O_train6_object.py  H2O_train6_object.sh  H2O_train6_object_evaluation.sh  LICENSE  MLP.py  MLP_augmented_distances.py  MLP_combined.sh  MLP_combined_double_loss.sh  MLP_combined_joints_emb.py  MLP_combined_joints_emb_enc_GPU_offsets.sh  (+29 more)
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
h2o_ca/: H2O_CA.py  H2O_CA_chain.py  H2O_CA_encoder_only.py  H2O_CA_next_frame_loss.py  H2O_a.sh  H2O_train6.py  H2O_train6.sh  H2O_train6_cross_4cam.py  H2O_train6_cross_att.py  H2O_train6_cross_notrace.py  H2O_train6_cross_offset.py  (+16 more)
(+248 files in other folders)
